removed vertical scroll in preview-wrapper, fixed navbar format, removed extra overflow scroll

--- a/src/App.scss
+++ b/src/App.scss
@@ -24,7 +24,7 @@
   padding: 1rem;
 
   .links-wrapper {
-    width: 20%;
+    width: 50%;
   }
 
   h1 {
@@ -155,6 +155,7 @@
     flex-direction: row;
     cursor: pointer;
     overflow-x: scroll;
+    overflow-y: hidden;
   }
   img {
     border-radius: 24px;
