--- a/src/index.css
+++ b/src/index.css
@@ -15,5 +15,4 @@ body {
   height: 100%;
   width: 100%;
   background-color: #1f1d36;
-  overflow: auto;
 }
